dev/tests/cases/neg/30_u128_global_negative.tv
set bad: u128 = -5;
df main() -> void { echo!(bad); }
